stacks/kubernetes/infra/apps/demo/prometheus/deployment-prometheus.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus
  namespace: tools
  labels:
    app: prometheus

spec:
  replicas: 1

  selector:
    matchLabels:
      app: prometheus

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 50%
      maxUnavailable: 50%

  template:
    metadata:
      labels:
        app: prometheus
      annotations:
        kubectl.kubernetes.io/default-container: prometheus

    spec:
      serviceAccountName: prometheus-dev

      securityContext:
        runAsNonRoot: true
        runAsUser: 65534
        fsGroup: 65534

      containers:
        - name: prometheus
          image: prom/prometheus@sha256:5ce7540c3c00ef4ab0c9d2c995c6a5b9c421f44b4a115d97a2c7af3b1c21cbb0
          imagePullPolicy: IfNotPresent

          args:
            - "--config.file=/etc/prometheus/prometheus.yml"

          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL

          resources:
            requests:
              cpu: 250m
              memory: 250Mi
            limits:
              cpu: 250m
              memory: 250Mi

          ports:
            - name: prometheus
              containerPort: 9090

          readinessProbe:
            httpGet:
              path: /-/ready
              port: 9090
            initialDelaySeconds: 10
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /-/healthy
              port: 9090
            initialDelaySeconds: 10
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 3

          volumeMounts:
            - name: prometheus-config
              mountPath: /etc/prometheus/prometheus.yml
              subPath: prometheus.yml
              readOnly: true

            - name: prometheus-rules
              mountPath: /etc/prometheus/rules
              readOnly: true

      volumes:
        - name: prometheus-config
          configMap:
            name: prometheus-config

        - name: prometheus-rules
          configMap:
            name: prometheus-rules

      restartPolicy: Always
