stacks/kubernetes/infra/apps/demo/prometheus/service-prometheus.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: tools
  labels:
    app: prometheus

spec:
  type: ClusterIP

  selector:
    app: prometheus

  ports:
    - name: prometheus
      port: 9090
      targetPort: prometheus
