stacks/kubernetes/infra/apps/demo/prometheus/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: tools
spec:
  ingressClassName: traefik
  rules:
  - host: testprometheus.boiguille.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prometheus
            port:
              number: 9090
